@@ -39,7 +39,7 @@ import org.gjt.sp.util.*;
 /**
  * Wraps the VFS browser in a modal dialog.
  * @author Slava Pestov
- * @version $Id: VFSFileChooserDialog.java,v 1.38 2003/05/23 21:19:52 spestov Exp $
+ * @version $Id: VFSFileChooserDialog.java,v 1.39 2003/05/26 00:15:41 spestov Exp $
  */
 public class VFSFileChooserDialog extends EnhancedDialog
 {
@@ -69,8 +69,11 @@ public class VFSFileChooserDialog extends EnhancedDialog
 		}
 
 		browser = new VFSBrowser(view,path,mode,multipleSelection,null);
+		browser.getBrowserView().getTable().setRequestFocusEnabled(false);
+		browser.getBrowserView().getParentDirectoryList()
+			.setRequestFocusEnabled(false);
+		/* browser.getBrowserView().getTable().addKeyListener(new KeyHandler()); */
 		browser.addBrowserListener(new BrowserHandler());
-		browser.getBrowserView().getTable().addKeyListener(new KeyHandler());
 		content.add(BorderLayout.CENTER,browser);
 
 		JPanel panel = new JPanel();
